--- a/TODO.txt
+++ b/TODO.txt
@@ -18,27 +18,39 @@ vue,react routing
 
     TODO
 
-UserService, UserController "spring controller notempty validation tests"
+post+user->username+isLikedByUser+likes+views
+
+jpa repository service dto projection
+https://www.baeldung.com/spring-data-jpa-projections
+https://medium.com/swlh/spring-data-jpa-projection-support-for-native-queries-a13cd88ec166
+https://vladmihalcea.com/dto-projection-jpa-query/
+https://thoughts-on-java.org/entities-dtos-use-projection/
+https://hellokoding.com/mapping-jpa-hibernate-entity-and-dto-with-mapstruct/
+
+(postctrl)LEFTJOIN isLikedByUser()-DTO?
+https://stackoverflow.com/questions/6877857/jpa-query-that-returns-multiple-entities/6880396
+interface MyRepository extends JpaRepository
+https://stackoverflow.com/questions/24638465/selecting-from-multiple-tables-in-spring-data
+https://stackoverflow.com/questions/2355728/jpql-create-new-object-in-select-statement-avoid-or-embrace/2359214#2359214
+
+vue.js
+spa application (page templates)
+vue router
+https://www.youtube.com/watch?v=HNTQINYjSaE&list=PLLvTAhHe8AYCf1RDc2l2ZWriPfMf-yZel&index=64
+vue.js project structure https://itnext.io/how-to-structure-a-vue-js-project-29e4ddc1aeeb
+webpack создание vue приложения
+https://habr.com/ru/post/351882/
+vue+spring mvc(router),users/security
+vue json request
+https://github.com/misterGF/CoPilot
+
+UserService, UserController unit tests "spring controller notempty validation tests"
 Spring REST Validation Example https://www.mkyong.com/spring-boot/spring-rest-validation-example/
 Custom Error Message Handling for REST API https://www.baeldung.com/global-error-handler-in-a-spring-rest-api
 https://www.baeldung.com/spring-boot-testing
 https://www.javacodegeeks.com/2013/08/unit-testing-of-spring-mvc-controllers-rest-api.html
 
-jpa repository service dto projection
-https://www.baeldung.com/spring-data-jpa-projections
-https://vladmihalcea.com/dto-projection-jpa-query/
-https://thoughts-on-java.org/entities-dtos-use-projection/
-https://stackoverflow.com/questions/46388363/spring-data-dto-projection
-https://medium.com/swlh/spring-data-jpa-projection-support-for-native-queries-a13cd88ec166
-https://hellokoding.com/mapping-jpa-hibernate-entity-and-dto-with-mapstruct/
-
-PostRepository, PostService, PostController tests
-
-(postctrl)LEFTJOIN hasUserLikedThePost()-DTO?
-https://stackoverflow.com/questions/6877857/jpa-query-that-returns-multiple-entities/6880396
-interface MyRepository extends JpaRepository
-https://stackoverflow.com/questions/24638465/selecting-from-multiple-tables-in-spring-data
-https://stackoverflow.com/questions/2355728/jpql-create-new-object-in-select-statement-avoid-or-embrace/2359214#2359214
+PostRepository, PostService, PostController tests (100% cover)
 
 Building REST services with Spring https://spring.io/guides/tutorials/rest/
 - keep readme up-to-date: description, technologies, architecture, data schema, API/controller endpoints
@@ -47,3 +59,10 @@ vue intros,vue+spring
 Spring Boot File Upload / Download Rest API Example https://www.callicoder.com/spring-boot-file-upload-download-rest-api-example/
 (userctrl)uploadAvatar
 wordpress theme https://demo.themegrill.com/colormag/ https://demo.themegrill.com/estore/
+
+Backend issues
+
+CustomGlobalExceptionHandler.java is missing handler for exceptions
+    "message":"Failed to convert value of type 'java.lang.String' to required type 'java.lang.Long';
+    nested exception is java.lang.NumberFormatException: For input string: \"null\"","path":"/feed"}
+Rewrite native sql in repositories to JPQL.
